Fixed memory usage limit for ExecuteStage